@@ -51,6 +51,8 @@ documents those changes that are of interest to users and administrators.
     and remove the mpi/openmpi plugin.
  -- burst_buffer/datawarp - add a set of % symbols that will be replaced by
     job details. E.g., %d will be filled in with the WorkDir for the job.
+ -- sacctmgr show Event now uses hostlist_create_dims which supports
+    ranges.
 
 * Changes in Slurm 19.05.5
 ==========================
